tests/ui/ergonomic-clones/async/local-type.stderr
error[E0573]: expected type, found local variable `x`
  --> $DIR/local-type.rs:8:27
   |
LL |     let _ = async use |x: x| x;
   |                           ^ not a type

error[E0573]: expected type, found local variable `x`
  --> $DIR/local-type.rs:9:36
   |
LL |     let _ = async use |x: bool| -> x { x };
   |                                    ^ not a type

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0573`.
